changed java 25 to 21 for better compatability with mongodb atlas